Add shader viewer and decompiler